--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
-﻿# CMakeList.txt : CMake project for Plex Rich Presence, include source and define
+﻿# CMakeList.txt : CMake project for PlexRichPresence, include source and define
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
+
+set(CMAKE_SUPPRESS_REGENERATION true)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
@@ -11,8 +13,11 @@ endif()
 
 project ("PlexRichPresence")
 
+file(GLOB_RECURSE SOURCES src/*.cpp)
+file(GLOB_RECURSE HEADERS src/*.h)
+
 # Add source to this project's executable.
-add_executable (CMakeTarget "main.cpp" "main.h")
+add_executable (CMakeTarget src/main.cpp ${SOURCES} ${HEADERS})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET CMakeTarget PROPERTY CXX_STANDARD 20)
