--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,15 @@ project ("PlexRichPresence")
 file(GLOB_RECURSE SOURCES src/*.cpp)
 file(GLOB_RECURSE HEADERS src/*.h)
 
+find_package(CURL REQUIRED) 
+
 # Add source to this project's executable.
-add_executable (CMakeTarget src/main.cpp ${SOURCES} ${HEADERS})
+add_executable (PlexRichPresence src/main.cpp ${SOURCES} ${HEADERS})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET CMakeTarget PROPERTY CXX_STANDARD 20)
+  set_property(TARGET PlexRichPresence PROPERTY CXX_STANDARD 20)
 endif()
+
+target_link_libraries(PlexRichPresence PRIVATE CURL::libcurl)
 
 # TODO: Add tests and install targets if needed.
