--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,4 @@
-﻿# CMakeList.txt : CMake project for PlexRichPresence, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.10)
+﻿cmake_minimum_required (VERSION 3.11)
 
 set(CMAKE_SUPPRESS_REGENERATION true)
 
@@ -30,9 +27,4 @@ if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET PlexRichPresence PROPERTY CXX_STANDARD 20)
 endif()
 
-
-add_custom_command(TARGET PlexRichPresence POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    $<TARGET_FILE_DIR:PlexRichPresence>
-)
 # TODO: Add tests and install targets if needed.
