--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.11)
+﻿cmake_minimum_required (VERSION 3.14)
 
 set(CMAKE_SUPPRESS_REGENERATION true)
 
@@ -8,7 +8,7 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("PlexRichPresence")
+project ("PlexRichPresence" VERSION 1.0.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE SOURCES src/*.cpp)
 file(GLOB_RECURSE HEADERS src/*.h)
@@ -20,13 +20,43 @@ endif()
 
 find_package(CURL CONFIG REQUIRED) 
 find_package(nlohmann_json REQUIRED)
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(tomlplusplus REQUIRED IMPORTED_TARGET tomlplusplus)
+# print the link‑dependent libraries of CURL::libcurl
+get_target_property(_curl_deps CURL::libcurl
+    INTERFACE_LINK_LIBRARIES)
+message(STATUS "CURL::libcurl deps = ${_curl_deps}")
+
+find_path(_TP_INC
+  NAMES toml++/toml.hpp
+  HINTS "${VCPKG_ROOT}/installed/${VCPKG_TARGET_TRIPLET}/include"
+)
+add_library(tomlplusplus::tomlplusplus INTERFACE IMPORTED)
+target_include_directories(tomlplusplus::tomlplusplus
+  INTERFACE "${_TP_INC}"
+)
+
+# Linux-specific dependencies
+if(UNIX AND NOT APPLE)
+  pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+  pkg_check_modules(APPINDICATOR3 REQUIRED appindicator3-0.1)
+  include_directories(${GTK3_INCLUDE_DIRS})
+  include_directories(${APPINDICATOR3_INCLUDE_DIRS})
+endif()
 
 # Add source to this project's executable.
-add_executable (PlexRichPresence src/main.cpp ${SOURCES} ${HEADERS} ${RES_FILES})
+if(WIN32)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
+    add_compile_definitions(WIN32_LEAN_AND_MEAN)
+    add_executable(PlexRichPresence WIN32 src/main.cpp ${SOURCES} ${HEADERS} ${RES_FILES})
+else()
+    add_executable(PlexRichPresence src/main.cpp ${SOURCES} ${HEADERS} ${RES_FILES})
+endif()
 
-target_link_libraries(PlexRichPresence PRIVATE CURL::libcurl PkgConfig::tomlplusplus)
+target_link_libraries(PlexRichPresence PRIVATE CURL::libcurl tomlplusplus::tomlplusplus)
+
+# Link Linux-specific libraries
+if(UNIX AND NOT APPLE)
+  target_link_libraries(PlexRichPresence PRIVATE ${GTK3_LIBRARIES} ${APPINDICATOR3_LIBRARIES})
+endif()
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET PlexRichPresence PROPERTY CXX_STANDARD 20)
@@ -39,9 +69,13 @@ install(FILES LICENSE README.md
 if (WIN32)
   install(FILES
     $<TARGET_RUNTIME_DLLS:PlexRichPresence>
+    $<$<CONFIG:Debug>:${VCPKG_ROOT}/${VCPKG_TARGET_TRIPLET}/debug/bin/zlibd1.dll>
+    $<$<NOT:$<CONFIG:Debug>>:${VCPKG_ROOT}/${VCPKG_TARGET_TRIPLET}/bin/zlib1.dll>
     DESTINATION .
   )
-  endif()
+endif()
+
+# Platform-specific packaging options
 if(WIN32)
     set(CPACK_GENERATOR "NSIS")
     # Set icon for NSIS installer
@@ -51,30 +85,41 @@ if(WIN32)
     # Add option for startup
     set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "
         CreateShortCut \\\"$DESKTOP\\\\Plex Rich Presence.lnk\\\" \\\"$INSTDIR\\\\PlexRichPresence.exe\\\" 
-        CreateDirectory \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\"
-        CreateShortCut \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\\Plex Rich Presence.lnk\\\" \\\"$INSTDIR\\\\PlexRichPresence.exe\\\"
+        CreateDirectory \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\" 
+        CreateShortCut \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\\Plex Rich Presence.lnk\\\" \\\"$INSTDIR\\\\PlexRichPresence.exe\\\" 
         WriteRegStr HKCU \\\"Software\\\\Microsoft\\\\Windows\\\\CurrentVersion\\\\Run\\\" \\\"PlexRichPresence\\\" \\\"$INSTDIR\\\\PlexRichPresence.exe\\\" 
     ")
-    
-    # Add uninstaller commands to remove startup entry and Start Menu shortcut
     set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "
         Delete \\\"$DESKTOP\\\\Plex Rich Presence.lnk\\\" 
-        Delete \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\\Plex Rich Presence.lnk\\\"
-        RMDir \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\"
+        Delete \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\\Plex Rich Presence.lnk\\\" 
+        RMDir \\\"$SMPROGRAMS\\\\Plex Rich Presence\\\" 
         DeleteRegValue HKCU \\\"Software\\\\Microsoft\\\\Windows\\\\CurrentVersion\\\\Run\\\" \\\"PlexRichPresence\\\" 
     ")
 elseif(APPLE)
     set(CPACK_GENERATOR "DragNDrop")
     set(CPACK_DMG_VOLUME_NAME "PlexRichPresence")
 elseif(UNIX)
-    set(CPACK_GENERATOR "DEB")
+    set(CPACK_GENERATOR "DEB;RPM")
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Andrew Barnes")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtk-3-0, libappindicator3-1, libcurl4, libc6")
+    set(CPACK_RPM_PACKAGE_REQUIRES "gtk3, libappindicator, libcurl")
+    
+    # Desktop integration for Linux
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/assets/plex-rich-presence.desktop"
+            DESTINATION "share/applications")
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/assets/plex-rich-presence.png"
+            DESTINATION "share/icons/hicolor/256x256/apps")
+    
+    # Install to standard Linux locations
+    set(CPACK_SET_DESTDIR ON)
+    set(CPACK_INSTALL_PREFIX "/usr")
 endif()
-set(CPACK_PACKAGE_NAME "PlexRichPresence")
+
+set(CPACK_PACKAGE_NAME "Plex Rich Presence")
 set(CPACK_PACKAGE_VERSION "1.0.0")
-set(CPACK_PACKAGE_VENDOR "PlexRichPresence")
+set(CPACK_PACKAGE_VENDOR "Plex Rich Presence")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Plex Rich Presence for Discord")
 set(CPACK_PACKAGE_EXECUTABLES "PlexRichPresence" "Plex Rich Presence")
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "PlexRichPresence")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "Plex Rich Presence")
 
 include(CPack)
