--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("PlexRichPresence" VERSION 1.0.0 LANGUAGES CXX)
+project ("PlexRichPresence" VERSION 0.1.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE SOURCES src/*.cpp)
 file(GLOB_RECURSE HEADERS src/*.h)
@@ -97,8 +97,8 @@ elseif(UNIX)
 endif()
 
 set(CPACK_PACKAGE_NAME "Plex Rich Presence")
-set(CPACK_PACKAGE_VERSION "1.0.0")
-set(CPACK_PACKAGE_VENDOR "Plex Rich Presence")
+set(CPACK_PACKAGE_VERSION "0.1.0")
+set(CPACK_PACKAGE_VENDOR "Andrew Barnes")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Plex Rich Presence for Discord")
 set(CPACK_PACKAGE_EXECUTABLES "PlexRichPresence" "Plex Rich Presence")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Plex Rich Presence")
