--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,17 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("PlexPresence" VERSION 0.2.1 LANGUAGES CXX)
+project ("PlexPresence" VERSION 0.3.0 LANGUAGES CXX)
+
+# Configure version.h from template
+configure_file(
+  ${CMAKE_CURRENT_LIST_DIR}/src/version.h.in
+  ${CMAKE_CURRENT_LIST_DIR}/src/version.h
+  @ONLY
+)
+
+# Add the binary directory to include paths so the generated header can be found
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 file(GLOB_RECURSE SOURCES src/*.cpp)
 file(GLOB_RECURSE HEADERS src/*.h)
@@ -96,7 +106,7 @@ elseif(UNIX)
 endif()
 
 set(CPACK_PACKAGE_NAME "Plex Presence")
-set(CPACK_PACKAGE_VERSION "0.2.1")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 set(CPACK_PACKAGE_VENDOR "Andrew Barnes")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Plex Presence for Discord")
 set(CPACK_PACKAGE_EXECUTABLES "PlexPresence" "Plex Presence")
