--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ set(CORE_SOURCES
 set(SERVICES_SOURCES
     src/services/presence_service.cpp
     src/services/media_service.cpp
+    src/services/update_service.cpp
     src/services/plex/plex_authenticator.cpp
     src/services/plex/plex_service_impl.cpp
     src/services/plex/plex_cache_manager.cpp
